Fix goldbar alignment on IE

--- a/src/styles/components/mm/components/_college.scss
+++ b/src/styles/components/mm/components/_college.scss
@@ -40,6 +40,10 @@
       margin-bottom: 1.25rem;
       width: 100%;
       flex: 1 1 auto;
+      @media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0)
+      { 
+        padding-bottom: 0;
+      }
       &:after {
         position:relative;
       }
