--- a/src/styles/components/mm/components/_header.scss
+++ b/src/styles/components/mm/components/_header.scss
@@ -252,6 +252,7 @@
           justify-content: stretch;
           overflow: hidden;
           flex: 1 1 auto;
+          margin-left:auto;
         }
       }
       &:hover {
